# TorchTDSCHA

./: .gitignore  CHANGELOG.md  CITATION.bib  EOF  Ensemble.py  README.md  d2.py  d3_efficient.py  d4_efficient.py  exemple.py  general_scripts.py  init.py  model_multi.py  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: conf.py
docs/_build/doctrees/: index.doctree
docs/_build/doctrees/source/: averages.doctree  diff_2nd.doctree  diff_3rd.doctree  diff_4th.doctree  dynamics.doctree  init.doctree  (+2 more)
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/source/: averages.rst  diff_2nd.rst  diff_3rd.rst  diff_4th.rst  dynamics.rst  init.rst  phonons.rst
examples/: example.py
src/: Ensemble.py  averages.py  d3_efficient.py  d4_efficient.py  diff_2nd.py  diff_3rd.py  diff_4th.py  dynamics.py  init.py  model_multi.py  phonons.py
src/calc_deriv/: chi_efficient.npy  psi_efficient.npy
src/torch_tdscha/: .init.py.swp  dynamics.py  init.py  phonons.py
src/torch_tdscha.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: final_result1  psi.npy  test_d2.py
tests/averages/: SPOSCAR  final_result1  test_averages_torch.py
tests/diff/: test_diff.py
tests/dynamics/: SPOSCAR  eps_charges  test_H2_0.npz  test_dynamics.py
tests/large_dynamics/: test_dynamics_torch.py
tests/torch_dynamics/: chi.npy  dynamics_H2_0.npz  eps_charges  phi.npy  test_H2_0.npz  test_dynamics.py  test_dynamics_torch.py  test_torch_dynamics.py
tools/: exact_unfold.py  general_scripts.py
(+10 files in other folders)
