[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exact-tdscha"
version = "0.1.0"
description = "Exact implementation of the Time-Dependent Self-Consistent Harmonic Approximation (TDSCHA)"
authors = [
    { name = "Francesco Libbi", email = "libbi@g.harvard.edu" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9,<=3.10"
dependencies = [
    "numpy",
    "scipy",
    "ase",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
